// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <ReleaseListing /> renders correctly with all props 1`] = `
<article
  class="ReleaseListing"
>
  <a
    href="/releases/slug"
  >
    <div
      class="ReleaseListing-details"
    >
      <header
        class="ReleaseListing-header"
      >
        <h3>
          <span>
            title
          </span>
        </h3>
      </header>
      <section
        class="ReleaseListing-meta"
      >
        <div
          class="Meta ReleaseListing-releasedOn"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Released
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            <time
              class="DateTime"
              datetime="2017-01-01T00:00:00"
              title="January 1, 2017"
            >
              January 1, 2017
            </time>
          </span>
        </div>
        <div
          class="Meta ReleaseListing-length"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Length
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            5:00
          </span>
        </div>
        <div
          class="Meta ReleaseListing-genre"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ReleaseListing-tracks"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
            />
          </svg>
            
          <span
            class="Meta-value"
          >
            4 
            <span>
              tracks
            </span>
          </span>
        </div>
      </section>
    </div>
    <img
      alt="title"
      src="images 1 imageUrl"
    />
  </a>
</article>
`;

exports[`[presentation] <ReleaseListing /> renders correctly with minimum props 1`] = `
<article
  class="ReleaseListing"
>
  <a
    href="/releases/slug"
  >
    <div
      class="ReleaseListing-details"
    >
      <header
        class="ReleaseListing-header"
      >
        <h3>
          <span>
            title
          </span>
        </h3>
      </header>
      <section
        class="ReleaseListing-meta"
      >
        <div
          class="Meta ReleaseListing-releasedOn"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Released
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            <time
              class="DateTime"
              datetime="2017-01-01T00:00:00"
              title="January 1, 2017"
            >
              January 1, 2017
            </time>
          </span>
        </div>
        <div
          class="Meta ReleaseListing-length"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Length
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            5:00
          </span>
        </div>
        <div
          class="Meta ReleaseListing-genre"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ReleaseListing-tracks"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
            />
          </svg>
            
          <span
            class="Meta-value"
          >
            1 
            <span>
              track
            </span>
          </span>
        </div>
      </section>
    </div>
    <img
      alt="title"
      src="images 1 imageUrl"
    />
  </a>
</article>
`;

exports[`[presentation] <ReleaseListing /> updates \`isImageLoaded\` state when image has previously been loaded 1`] = `
<article
  class="ReleaseListing isRendered"
>
  <a
    href="/releases/slug"
  >
    <div
      class="ReleaseListing-details"
    >
      <header
        class="ReleaseListing-header"
      >
        <h3>
          <span>
            title
          </span>
        </h3>
      </header>
      <section
        class="ReleaseListing-meta"
      >
        <div
          class="Meta ReleaseListing-releasedOn"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Released
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            <time
              class="DateTime"
              datetime="2017-01-01T00:00:00"
              title="January 1, 2017"
            >
              January 1, 2017
            </time>
          </span>
        </div>
        <div
          class="Meta ReleaseListing-length"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Length
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            5:00
          </span>
        </div>
        <div
          class="Meta ReleaseListing-genre"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ReleaseListing-tracks"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
            />
          </svg>
            
          <span
            class="Meta-value"
          >
            1 
            <span>
              track
            </span>
          </span>
        </div>
      </section>
    </div>
    <img
      alt="title"
      src="images 1 imageUrl"
    />
  </a>
</article>
`;

exports[`[presentation] <ReleaseListing /> updates \`isRendered\` state after image has loaded 1`] = `
<article
  class="ReleaseListing isRendered"
>
  <a
    href="/releases/slug"
  >
    <div
      class="ReleaseListing-details"
    >
      <header
        class="ReleaseListing-header"
      >
        <h3>
          <span>
            title
          </span>
        </h3>
      </header>
      <section
        class="ReleaseListing-meta"
      >
        <div
          class="Meta ReleaseListing-releasedOn"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Released
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            <time
              class="DateTime"
              datetime="2017-01-01T00:00:00"
              title="January 1, 2017"
            >
              January 1, 2017
            </time>
          </span>
        </div>
        <div
          class="Meta ReleaseListing-length"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Length
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            5:00
          </span>
        </div>
        <div
          class="Meta ReleaseListing-genre"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ReleaseListing-tracks"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
            />
          </svg>
            
          <span
            class="Meta-value"
          >
            1 
            <span>
              track
            </span>
          </span>
        </div>
      </section>
    </div>
    <img
      alt="title"
      src="images 1 imageUrl"
    />
  </a>
</article>
`;
